--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html {
 @layer base {
   body {
     font-family: 'Courier New', Courier, monospace;
+    background: black;
   }
 }
 
@@ -27,3 +28,48 @@ html {
   @apply relative z-10;
 }
 
+.intro-picture {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 10px;
+}
+
+@font-face {
+  font-family: 'Retro-Font';
+  src: url(/Fonts/IBM_CGA.ttf) format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.intro-text {
+  font-family: Retro-Font;
+  font-size: 18px;
+  font-weight: lighter;
+  color: grey;
+}
+
+.intro-layout {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;  /* 75% is the height ratio for 4:3 */
+  position: relative;
+}
+
+.intro-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.intro-picture img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
